--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,9 @@
 buildscript {
+  repositories {
+    maven {
+      url("https://plugins.gradle.org/m2/")
+    }
+   }
     dependencies {
         classpath("com.moowork.gradle:gradle-node-plugin:0.12")
     }
