--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
         "google-map": "^1.1.11",
         "paper-button": "1.0.13",
         "iron-ajax": "PolymerElements/iron-ajax#^1.4.3",
+        "iron-image": "PolymerElements/iron-image#^1.2.5",
         "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.3.5",
         "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
         "paper-item": "PolymerElements/paper-item#^1.2.1"
