--- a/bower.json
+++ b/bower.json
@@ -34,6 +34,7 @@
         "iron-image": "PolymerElements/iron-image#^1.2.5",
         "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.3.5",
         "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
+        "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.3",
         "paper-item": "PolymerElements/paper-item#^1.2.1"
     }
 }
