--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
         "paper-toast": "PolymerElements/paper-toast#^1.3.0",
         "google-chart": "GoogleWebComponents/google-chart#^1.1.0",
         "google-feeds": "GoogleWebComponents/google-feeds#^1.0.2",
+        "google-streetview-pano": "GoogleWebComponents/google-streetview-pano#^1.0.3",
         "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.2.0",
         "app-layout": "PolymerElements/app-layout#^0.10.4",
         "app-storage": "PolymerElements/app-storage#^0.9.4",
