--- a/bower.json
+++ b/bower.json
@@ -36,6 +36,9 @@
         "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.3.5",
         "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
         "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.3",
-        "paper-item": "PolymerElements/paper-item#^1.2.1"
+        "paper-item": "PolymerElements/paper-item#^1.2.1",
+		"polymer-paper-date-picker": "^1.2.0",
+		"paper-time-picker": "^1.1.4",
+		"chart-elements": "^3.1.2"
     }
 }
