--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
         "app-storage": "PolymerElements/app-storage#^0.9.4",
         "iron-a11y-keys-behavior": "PolymerElements/iron-a11y-keys-behavior#^1.1.9",
         "google-youtube": "GoogleWebComponents/google-youtube#^1.2.1",
+        "google-chart": "GoogleWebComponents/google-chart#^1.1.1",
         "sortablejs": "^1.4.2",
         "iron-demo-helpers": "^1.2.5",
         "google-map": "^1.1.11",
@@ -37,8 +38,8 @@
         "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
         "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.3",
         "paper-item": "PolymerElements/paper-item#^1.2.1",
-		"polymer-paper-date-picker": "^1.2.0",
-		"paper-time-picker": "^1.1.4",
-		"chart-elements": "^3.1.2"
+        "polymer-paper-date-picker": "^1.2.0",
+        "paper-time-picker": "^1.1.4",
+        "chart-elements": "^3.1.2"
     }
 }
